import { createStore, InitializedStore } from "@frontity/connect";
import clone from "clone-deep";
import wpSource from "../../../";
import WpSource from "../../../../types";
import Api from "../../api";
// JSON mocks
import { mockResponse } from "./mocks/helpers";
import date2019Posts from "./mocks/date/2019-posts.json";
import date2019PostsPage2 from "./mocks/date/2019-posts-page-2.json";
import date201901Posts from "./mocks/date/2019-01-posts.json";
import date20190101Posts from "./mocks/date/2019-01-01-posts.json";
import date20190101PostsCpt from "./mocks/date/2019-01-01-posts-cpt.json";

let store: InitializedStore<WpSource>;
let api: jest.Mocked<Api>;
beforeEach(() => {
  store = createStore(clone(wpSource()));
  store.state.source.api = "https://test.frontity.io/wp-json";
  store.actions.source.init();
  api = store.libraries.source.api as jest.Mocked<Api>;
});

describe("date", () => {
  test("get two pages of year 2019", async () => {
    // Mock Api responses
    api.get = jest
      .fn()
      .mockResolvedValueOnce(
        mockResponse(date2019Posts, {
          "X-WP-Total": "5",
          "X-WP-TotalPages": "2",
        })
      )
      .mockResolvedValueOnce(
        mockResponse(date2019PostsPage2, {
          "X-WP-Total": "5",
          "X-WP-TotalPages": "2",
        })
      );
    // Fetch entities
    await store.actions.source.fetch("/2019/");
    await store.actions.source.fetch("/2019/page/2/");
    expect(api.get.mock.calls).toMatchSnapshot();
    expect(store.state.source).toMatchSnapshot();
  });

  test("get two pages of year 2019 (with query params)", async () => {
    // Mock Api responses
    api.get = jest
      .fn()
      .mockResolvedValueOnce(
        mockResponse(date2019Posts, {
          "X-WP-Total": "5",
          "X-WP-TotalPages": "2",
        })
      )
      .mockResolvedValueOnce(
        mockResponse(date2019PostsPage2, {
          "X-WP-Total": "5",
          "X-WP-TotalPages": "2",
        })
      );
    // Fetch entities
    await store.actions.source.fetch("/2019/?some=param");
    await store.actions.source.fetch("/2019/page/2/?some=param");
    expect(api.get.mock.calls).toMatchSnapshot();
    expect(store.state.source).toMatchSnapshot();
  });

  test("get January, 2019", async () => {
    // Mock Api responses
    api.get = jest.fn().mockResolvedValueOnce(
      mockResponse(date201901Posts, {
        "X-WP-Total": "2",
        "X-WP-TotalPages": "1",
      })
    );
    // Fetch entities
    await store.actions.source.fetch("/2019/01/");
    expect(api.get.mock.calls).toMatchSnapshot();
    expect(store.state.source).toMatchSnapshot();
  });

  test("get January 1, 2019", async () => {
    // Mock Api responses
    api.get = jest.fn().mockResolvedValueOnce(
      mockResponse(date20190101Posts, {
        "X-WP-Total": "1",
        "X-WP-TotalPages": "1",
      })
    );
    // Fetch entities
    await store.actions.source.fetch("/2019/01/01");
    expect(api.get.mock.calls).toMatchSnapshot();
    expect(store.state.source).toMatchSnapshot();
  });

  test("fetchs from a different endpoint with extra params", async () => {
    // Add custom post endpoint and params
    store.state.source.postEndpoint = "multiple-post-type";
    store.state.source.params = { type: ["post", "cpt"] };
    // Mock Api responses
    api.get = jest.fn().mockResolvedValueOnce(
      mockResponse(date20190101PostsCpt, {
        "X-WP-Total": "2",
        "X-WP-TotalPages": "1",
      })
    );
    // Fetch entities
    await store.actions.source.fetch("/2019/01/01");
    expect(api.get.mock.calls).toMatchSnapshot();
    expect(store.state.source).toMatchSnapshot();
  });

  test("returns 404 if the page fetched is empty", async () => {
    // Mock Api responses
    api.get = jest.fn().mockResolvedValueOnce(mockResponse([]));
    // Fetch entities
    await store.actions.source.fetch("/2020/");
    expect(api.get.mock.calls).toMatchSnapshot();
    expect(store.state.source).toMatchSnapshot();
  });
});
